# jupyter_server_fileid

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE.md  conftest.py  pyproject.toml
.github/workflows/: build.yml  check-release.yml  test-python.yml
docs/: conf.py  index.md
docs/user_guide/: index.md
jupyter_server_fileid/: __init__.py  cli.py  extension.py  handler.py  handlers.py  manager.py  pytest_plugin.py
jupyter_server_fileid/tests/: __init__.py  test_manager.py
tests/: test_handler.py  test_manager.py
